descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2012-04-XX  Release 7.21.X                                     ---
----------------------------------------------------------------------

* support for implicit to boundary representation geometry conversion
	- Cliff Yapp, Wu Jianbang, Sean Morrison
* added rtwizard support for writing out .png images
	- Bob Parker, Cliff Yapp, Richard Weiss
* fixed region demotion bug in the mged 'red' command - Richard Weiss
* added implicit conversion support to 'brep' command - Wu Jianbang
* improved NURBS raytracing grazing hit & edge behavior - Keith Bowman
* added initial documentation for make_pnts command - Richard Weiss
* fixed gqa crash when specified objects didn't exist - Richard Weiss
* rtedge and rtwizard support multiple occlusion objects - Bob Parker
* fixed mged matrix edit bug selecting the last matrix - Bob Parker
* added 'lc' command to mged for listing region codes - Richard Weiss
* fixed rtedge/rtwizard edge overlay rendering bug - Bob Parker
* fixed 'open: Permission denied' rtedge output file bug - Cliff Yapp
* upgraded libpng to 1.5.10 - Cliff Yapp
* fixed various memory leaks in the comgeom-g geometry importer
	- Tom Browder, Nick Reed
* fixed comgeom-g bug importing ARS primitive objects - Tom Brower
* added new command-line invocation support to rtwizard -  Cliff Yapp
* fixed BoT mesh hit offset and vanish TIE render bugs  - Keith Bowman
* improved nurbs raytracing when shooting from inside - Keith Bowman
* added 'draw'/'e' -m1 option for shading BoTs in mged - Richard Weiss
* expanded docs on mged listeval and 'l' list commands - Richard Weiss
* removed obsolete 'syn' multi sine synthesis tool - Sean Morrison
* fixed memory corruption in vegetation generator tool - Sean Morrison
* fixed ARS bounding box size affecting overlap handling - Cliff Yapp